...
            "value" : "Suchen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Keresés"
...
            "value" : "Bearbeiten"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Edit"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Szerkesztés"
...
            "value" : "Eier"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eggs"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tojás"
...
            "value" : "Milch"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Milk"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tej"
...
            "value" : "Favorit"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favorite"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kedvenc"
...
            "state" : "translated",
            "value" : "Keresés vonalkóddal"
          }
        }
      }
    },
    "search.createProduct" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neues Produkt mit diesem Barcode"
...
